Fixed layout issue

--- a/eCom_react/src/styles/index.css
+++ b/eCom_react/src/styles/index.css
@@ -16,15 +16,6 @@ body {
 .link-styles-mobile {
   font-size: 1.3em;
 }
-.link-styles-mobile:hover,
-.link-styles:hover {
-  font-weight: 500;
-}
-.grid-container {
+.custom-max-width {
   max-width: 1200px;
-  min-width: 280px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  justify-content: center;
-  align-items: center;
 }
